# Data-Warehouse

./: .env.example  .gitignore  README.md  exemplo.env  profiles.yml  pyproject.toml
.github/workflows/: dbt.yml
app/: app.py
datawarehouse/: dbt_project.yml
datawarehouse/docs/: homepage.md
datawarehouse/models/: schema.yml
datawarehouse/models/datamart/: schema.yml
datawarehouse/models/staging/: schema.yml  stg_commodities.sql  stg_movimentacao_commodities.sql
datawarehouse/seeds/: movimentacao_commodities.csv
src/: extract_load.py  ingest.py  teste.py
