[tool.poetry]
name = "data-warehouse"
version = "0.1.0"
description = ""
authors = ["Renan Rodrigues <renan.william8@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^3.0.2"
sqlalchemy = "^2.0.49"
python-dotenv = "^1.2.2"
psycopg2-binary = "^2.9.12"
yfinance = "^1.3.0"
dbt-postgres = "^1.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"